2007-08-09  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Components.addin.xml, Makefile.am, MonoDevelop.Components.mdp:
	  Reorganized the extension point hierarchy. Embedded all add-in manifests
	  as resources.

2007-08-08  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/objects.xml, MonoDevelop.Components.mdp: Inclide IconView to the
	  exported widget list.

2007-07-26  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Components.Commands/KeyBindingManager.cs: Added missing
	  null check.

2007-07-20  Jeffrey Stedfast  <fejj@novell.com>

	* MonoDevelop.Components.Commands/KeyBindingManager.cs
	(AccelToKey): Fixed to properly parse keys like % and others that
	are valid characters but have a named enum value.

2007-07-18  Jeffrey Stedfast  <fejj@novell.com>

	* MonoDevelop.Components.Commands/KeyBindingService.cs (LoadBinding):
	Doh, need to use the correct hash key.

2007-07-18  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Components.Commands/CommandManager.cs,
	  MonoDevelop.Components.Commands/CommandHandlerAttribute.cs: Allow
	  assigning multiple command handler attributes to a single method.

2007-07-18  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Components.Commands/CommandManager.cs: Don't crash if a
	  command is not found.

2007-07-17  Jeffrey Stedfast  <fejj@gnome.org>

	* MonoDevelop.Components.Commands/KeyBindingService.cs: Use the
	cmd.Id as the key instead of cmd.Text.

2007-07-18  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Components.Commands/Command.cs,
	  MonoDevelop.Components.Commands/CommandManager.cs: Add support for
	  command categories.

2007-07-17  Jeffrey Stedfast  <fejj@novell.com>

	* KeyBindingSchemes.xml: Added

	* MonoDevelop.Components.Commands/CommandManager.cs: Use the new
	KeyBindingManager and connect to the root window's KeyPressEvent
	so that we can manage our own keybindings, bypassing Gtk's limited
	key-binding management.
