@@ -1,3 +1,7 @@
+2007-07-29  Zach Lute <zach.lute@gmail.com>
+
+	* KeyBindingSchemes.xml: Added MoveBlockUp and MoveBlockDown bindings.
+
 2007-08-09  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* MonoDevelop.Components.addin.xml, Makefile.am, MonoDevelop.Components.mdp:
